// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar Avatar - size: Custom shape: Circle 1`] = `
<span
  class="-avatar- -circle-"
  style="font-size: 1.125rem; width: 3rem; height: 3rem; line-height: 3rem;"
  tabindex="0"
/>
`;

exports[`Avatar Avatar - size: Custom shape: Square 1`] = `
<span
  class="-avatar-"
  style="font-size: 1.125rem; width: 3rem; height: 3rem; line-height: 3rem;"
  tabindex="0"
/>
`;

exports[`Avatar Avatar - size: L shape: Circle 1`] = `
<span
  class="-avatar- -sizeL- -circle-"
  tabindex="0"
/>
`;

exports[`Avatar Avatar - size: L shape: Square 1`] = `
<span
  class="-avatar- -sizeL-"
  tabindex="0"
/>
`;

exports[`Avatar Avatar - size: M shape: Circle 1`] = `
<span
  class="-avatar- -sizeM- -circle-"
  tabindex="0"
/>
`;

exports[`Avatar Avatar - size: M shape: Square 1`] = `
<span
  class="-avatar- -sizeM-"
  tabindex="0"
/>
`;

exports[`Avatar Avatar - size: S shape: Circle 1`] = `
<span
  class="-avatar- -sizeS- -circle-"
  tabindex="0"
/>
`;

exports[`Avatar Avatar - size: S shape: Square 1`] = `
<span
  class="-avatar- -sizeS-"
  tabindex="0"
/>
`;

exports[`Avatar Avatar - size: XL shape: Circle 1`] = `
<span
  class="-avatar- -sizeXL- -circle-"
  tabindex="0"
/>
`;

exports[`Avatar Avatar - size: XL shape: Square 1`] = `
<span
  class="-avatar- -sizeXL-"
  tabindex="0"
/>
`;

exports[`Avatar Avatar - size: XS shape: Circle 1`] = `
<span
  class="-avatar- -sizeXS- -circle-"
  tabindex="0"
/>
`;

exports[`Avatar Avatar - size: XS shape: Square 1`] = `
<span
  class="-avatar- -sizeXS-"
  tabindex="0"
/>
`;

exports[`Avatar with Initials 1`] = `
<span
  class="-avatar- -sizeXL- -circle-"
  tabindex="0"
>
  JD
</span>
`;
